# ComeAgainQuestionMark

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test.txt  visa-maija.txt  vosk_2.txt
.github/workflows/: ci.yml  format-and-lint.yml  format-black.yml  release.yml  test.yml
TextOutput/: my_transcription_file.txt  nuskajagvisamaija.txt  nuskajagvisamaija2.txt  test.txt  test2.txt  test3.txt  test5.txt
assets/ConvertedAudio/: .my_video_file.wav.icloud  .transcribed_speech.wav.icloud  .transcribed_speech1.wav.icloud
assets/VideoInput/: .Clean Code vs Quick Code.wav.icloud  .Interview Etiquette - Good Example.mp4.icloud  .Interview Etiquette - Good Example.wav.icloud  .my_video_file.mp4.icloud
comeAgainQuestionMark/: __main__.py  main.py
comeAgainQuestionMark/test/: test_main.py
src/ComeAgainQuestionMark/: __init__.py
tests/: test_main.py
