[tool.poetry]
name = "comeagainquestionmark"
version = "0.1.0"
description = "Transcription tool for video to text"
authors = ["Henry Bergström <henrybergstrom@protonmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
certifi = "2021.5.30"
charset-normalizer = "2.0.3"
decorator = "4.4.2"
idna = "3.2"
imageio = "2.9.0"
imageio-ffmpeg = "0.4.4"
moviepy = "1.0.3"
numpy = "1.21.1"
Pillow = "8.3.1"
proglog = "0.1.9"
progress = "1.6"
requests = "2.26.0"
SpeechRecognition = "3.8.1"
tqdm = "4.61.2"
urllib3 = "1.26.6"
Wave = "0.0.2"
alive-progress = "1.6.2"
autopep8 = "^1.5.7"
black = "^21.7b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
