[tool.poetry]
name = "comeagainquestionmark"
version = "0.1.2"
description = "Transcription tool for video to text"
authors = ["Henry Bergström <henrybergstrom@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
SpeechRecognition = "^3.8.1"
alive-progress = "^1.6.2"
moviepy = "^1.0.3"
vosk = "^0.3.30"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "comeAgainQuestionMark/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
